[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
gthread = { git = "https://github.com/leninRessurect/gthread", branch = "master" }
clap = { version = "3.2.20", features = ["derive"] }
rsa_rs = "0.1.2"
