[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.21.0", features = ["full"] }
clap = { version = "3.2.20", features = ["derive"] }
rsa_rs = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
