[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
rsa_rs = "0.1.5"
serde_json = "1.0"
rsa_utils = "0.1.0"
